--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
-    "date-fns": "^4.1.0"
+    "date-fns": "^4.1.0",
+    "lodash": "^4.17.21"
   }
 }
